config connect database, executeSQL

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-PORT = 3000;
+PORT=3001
+
+HOST_DATABASE="localhost"
+PORT_DATABASE=3306
+USER_DATABASE="admin"
+PASSWORD_DATABASE="admin"
+NAME_DATABASE="qlhs"
