--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-handlebars": "^4.0.4",
     "express-session": "^1.17.1",
     "express-validator": "^6.6.0",
+    "handlebars": "^4.7.6",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
