--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.6.0",
     "formidable": "^1.2.2",
+    "fs": "0.0.1-security",
     "handlebars": "^4.7.6",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
